syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.ca.loginService";
option java_outer_classname = "UserServiceImpl";


service UserService{
	rpc login(LoginRequest) returns (LoginResponse){}
	rpc logout(LogoutRequest) returns (LogoutResponse){}
	rpc stampIn(StampInRequest) returns (StampInResponse){}
	rpc stampOut(StampOutRequest) returns (StampOutResponse){}
	
}

message LoginRequest{
	string username = 1;
	string password = 2;
}

message LoginResponse{
	string responseMessage = 1;
	int32 responseCode = 2;
}

message LogoutRequest{
	string username = 1;
}

message LogoutResponse{
	string responseMessage = 1;
	int32 responseCode = 2;
}

message StampInRequest{
	string username = 1;
}

message StampInResponse{
	string responseMessage =1;
}

message StampOutRequest{
	string username = 1;
}

message StampOutResponse{
	string responseMessage =1;
}
message Empty{}